Fix: width for container on mobile

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -378,7 +378,7 @@ font-size: 0.95rem;
 @media (max-width: 560px) {
 .genre-container {
         grid-template-columns: repeat(1, 1fr);
-        width: calc(100% - 5rem);
+         width: calc(100% - 2rem);
         gap: 0.75rem;
         margin-bottom: 2rem;
     }
